Added functionality to the first buuton

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <a class="header_logo_link" href="#">Movie App</a>
       </div>
 
+      <ul class="category_list">
+        <a id="premier" href="#"><li class="list">Премьера</li></a>
+        <a href=""><li class="list">Ожидаемые</li></a>
+        <a href=""><li class="list">Лучшие фильмы</li></a>
+        <a href=""><li class="list">Релизы</li></a>
+      </ul>
+
       <div class="header_search">
         <input id="input" class="header_search_input" type="text" />
         <button id="btn" class="header_search_button">
@@ -26,9 +33,7 @@
     </header>
 
     <main class="main">
-      <div class="container">
-        <div id="show" class="content"></div>
-      </div>
+      <div class="container" id="movies"></div>
     </main>
   </body>
 </html>
