--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
       <ul class="category_list">
         <a id="premier" href="#"><li class="list">Премьера</li></a>
-        <a href=""><li class="list">Ожидаемые</li></a>
-        <a href=""><li class="list">Лучшие фильмы</li></a>
-        <a href=""><li class="list">Релизы</li></a>
+        <a id="top_expected" href="#"><li class="list">Ожидаемые</li></a>
+        <a id="best_films" href="#"><li class="list">Лучшие фильмы</li></a>
+        <a id="e_releases" href="#"><li class="list">Релизы</li></a>
       </ul>
 
       <div class="header_search">
